plugins/authentication/mutual-tls-authentication/3-echo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mtls-auth-plugin
  namespace: testing
  annotations:
    konghq.com/plugins: mtls-auth-plugin
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /mtls-auth
        pathType: ImplementationSpecific
        backend:
          service:
            name: echo
            port:
              number: 80
